# new-project

./: mkdocs.yml  pyproject.toml  requirements.txt
core/: settings.py  urls.py
docs/: index.md
menu/: apis.py  dto.py  models.py  serializers.py  services.py  urls.py
menu/migrations/: 0001_initial.py  0002_remove_ingredientes_calorias.py  0003_itemmedia_item.py  0004_itemmedia_title_alter_itemmedia_imagem.py  0005_alter_item_item_media_id.py  0006_alter_item_item_media_id.py  0007_item_ingredientes.py  0008_menu.py  0009_menucategoria_menu_categoria.py  0010_alter_menu_categoria.py  0011_alter_menu_categoria.py  0012_alter_item_ingredientes.py  0013_alter_item_ingredientes_alter_menu_categoria.py  0014_alter_item_ingredientes_alter_menu_categoria.py  0015_alter_item_ingredientes.py  0016_menumedia.py  0017_menu_items.py  0018_alter_ingredientes_nome_alter_item_nome_and_more.py  0019_rename_item_media_id_item_media.py  0020_alter_item_media.py  0021_alter_item_media.py
menu/tests/: fixtures.py  test_apis.py  test_models.py  test_models_ingrediente.py  test_models_item.py  test_models_item_media.py  test_models_menu.py  test_urls.py
new_app/: asgi.py  settings.py  urls.py  wsgi.py
tests/menu/: test_models_ingrediente.py  test_models_item.py  test_models_item_media.py  test_models_menu.py
user/: apis.py  dto.py  models.py  serializers.py  services.py  signals.py  urls.py
user/migrations/: 0001_initial.py  0002_alter_client_user.py
user/tests/: fixtures.py  test_apis.py  test_models.py  test_urls.py
